--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
+<head><?xml version="1.0" encoding="UTF-8"?>
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+  <url>
+    <loc>https://sweeps.tradelotdeals.com/</loc>
+    <priority>1.0</priority>
+  </url>
+</urlset>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sweeps Snapshot Pro | Sweepstakes Casino Bonus & Wagering Comparison Tool</title>
-
+  <!-- SEO META -->
+<meta charset="UTF-8">
 <meta name="description" content="Sweeps Snapshot Pro tracks sweepstakes casino bonuses, wagering requirements, cashback offers, and edge value scoring to help players compare promotions intelligently.">
 <meta name="keywords" content="sweepstakes casinos, sweeps casino bonuses, wagering requirements, sweepstakes comparison tool, casino promo tracker, sweeps value score">
 <meta name="author" content="A Townsend Solution">
 <meta name="robots" content="index, follow">
 
+<!-- Open Graph (for sharing previews) -->
 <meta property="og:title" content="Sweeps Snapshot Pro - Sweepstakes Casino Bonus Tracker">
 <meta property="og:description" content="Compare sweepstakes casino bonuses, wagering requirements, cashback rates, and value scores in one place.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://sweeps.tradelotdeals.com">
 <meta property="og:image" content="https://sweeps.tradelotdeals.com/logo.png">
 
+<!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Sweeps Snapshot Pro">
 <meta name="twitter:description" content="Compare sweepstakes casino bonuses and value scores intelligently.">
 <meta name="twitter:image" content="https://sweeps.tradelotdeals.com/logo.png">
-
 <script src="https://cdn.tailwindcss.com"></script>
 
 <style>
@@ -31,7 +38,11 @@ html,body{
   color:#e5e7eb;
   font-family:sans-serif;
 }
-.machine{box-shadow:0 0 40px rgba(0,255,0,0.15);}
+
+.machine{
+  box-shadow:0 0 40px rgba(0,255,0,0.15);
+}
+
 .reel-container{
   width:100px;
   height:100px;
@@ -41,29 +52,44 @@ html,body{
   background:#111827;
   position:relative;
 }
+
 @media(min-width:640px){
-  .reel-container{width:130px;height:130px;}
+  .reel-container{
+    width:130px;
+    height:130px;
+  }
 }
-.reel-strip{position:absolute;top:0;left:0;width:100%;}
+
+.reel-strip{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+}
+
 .reel-strip img{
   width:100%;
   height:100px;
   object-fit:contain;
   display:block;
 }
+
 @media(min-width:640px){
-  .reel-strip img{height:130px;}
+  .reel-strip img{
+    height:130px;
+  }
 }
+
 .win-glow{
   animation:glow 1s ease-in-out infinite alternate;
 }
+
 @keyframes glow{
   from{box-shadow:0 0 10px rgba(0,255,0,0.2);}
   to{box-shadow:0 0 25px rgba(0,255,0,0.7);}
 }
 </style>
-
-<script type="application/ld+json">
+  <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -87,9 +113,15 @@ html,body{
 
 <div class="machine bg-gray-900 p-5 rounded-xl border border-gray-800 w-full max-w-md">
   <div class="flex justify-center gap-4 mb-6">
-    <div class="reel-container"><div class="reel-strip" id="reel1"></div></div>
-    <div class="reel-container"><div class="reel-strip" id="reel2"></div></div>
-    <div class="reel-container"><div class="reel-strip" id="reel3"></div></div>
+    <div class="reel-container">
+      <div class="reel-strip" id="reel1"></div>
+    </div>
+    <div class="reel-container">
+      <div class="reel-strip" id="reel2"></div>
+    </div>
+    <div class="reel-container">
+      <div class="reel-strip" id="reel3"></div>
+    </div>
   </div>
 
   <button onclick="spinReels()" 
@@ -100,7 +132,262 @@ html,body{
 
 </section>
 
-<!-- keep rest of your existing working content exactly as before -->
+<!-- LIST SECTION -->
+<section class="px-4 sm:px-8 pb-12">
 
+<h1 class="text-2xl sm:text-3xl font-semibold mb-2 text-center">
+Sweeps Snapshot Pro
+</h1>
+
+<p class="text-gray-400 mb-6 text-center">
+Edge scoring • Trap detection • Bankroll impact • CSV export
+</p>
+
+<div class="flex justify-center mb-6">
+<input type="text" id="searchInput" placeholder="Search platform..."
+class="p-2 rounded bg-gray-800 text-white w-full sm:w-64 outline-none"/>
+</div>
+
+<div class="overflow-x-auto rounded-lg border border-gray-800">
+<table class="min-w-full text-xs sm:text-sm">
+<thead class="bg-gray-800">
+<tr>
+<th class="p-3 text-left">Platform</th>
+<th class="p-3 text-left">Bonus</th>
+<th class="p-3 text-left">Wager</th>
+<th class="p-3 text-left">Cashback %</th>
+<th class="p-3 text-left">Daily Bonus</th>
+<th class="p-3 text-left">Expires</th>
+<th class="p-3 text-left">Value Score</th>
+<th class="p-3 text-left">Risk</th>
+</tr>
+</thead>
+<tbody id="promoTable"></tbody>
+</table>
+</div>
+
+</section>
+
+<script>
+
+/* REELS */
+const symbols=["cherry.png","diamond.png","seven.png","logo.png"];
+const loops=25;
+
+function buildReel(id){
+  const reel=document.getElementById(id);
+  reel.innerHTML="";
+  for(let i=0;i<loops;i++){
+    symbols.forEach(sym=>{
+      const img=document.createElement("img");
+      img.src=sym;
+      reel.appendChild(img);
+    });
+  }
+  const final=document.createElement("img");
+  final.src="logo.png";
+  reel.appendChild(final);
+}
+
+function spinSingle(id,delay){
+  const reel=document.getElementById(id);
+  buildReel(id);
+
+  const containerHeight=reel.parentElement.offsetHeight;
+  const totalHeight=reel.scrollHeight-containerHeight;
+
+  reel.style.transition="none";
+  reel.style.transform="translateY(0px)";
+
+  setTimeout(()=>{
+    reel.style.transition=`transform ${3+delay}s cubic-bezier(.15,.8,.2,1)`;
+    reel.style.transform=`translateY(-${totalHeight}px)`;
+  },100);
+
+  setTimeout(()=>{
+    reel.parentElement.classList.add("win-glow");
+  },3000+(delay*1000));
+}
+
+function spinReels(){
+  document.querySelectorAll(".reel-container").forEach(r=>r.classList.remove("win-glow"));
+  spinSingle("reel1",0);
+  spinSingle("reel2",0.5);
+  spinSingle("reel3",1);
+}
+
+buildReel("reel1");
+buildReel("reel2");
+buildReel("reel3");
+
+/* FULL PROMO LIST */
+const promos=[
+{
+platform:"CrownCoins",
+url:"https://crowncoinscasino.com/?utm_campaign=e5a62c74-1909-4463-a6c8-f958748a9be4&utm_source=friends",
+bonus:60,wager:5,cashback:5,daily:1,expires:"2026-03-15"
+},
+{
+platform:"LoneStar Casino",
+url:"https://lonestarcasino.com/refer/1490917",
+bonus:105,wager:5,cashback:3,daily:1,expires:"2026-03-15"
+},
+{
+platform:"Stake.us",
+url:"https://stake.us/?c=n75tP6HL",
+bonus:56,wager:3,cashback:8,daily:1,expires:"2026-03-20"
+},
+{
+platform:"McLuck Casino",
+url:"https://mcluckcasino.com",
+bonus:30,wager:4,cashback:2,daily:1,expires:"2026-03-15"
+},
+{
+platform:"MegaBonanza",
+url:"https://www.megabonanza.com/?r=336854633",
+bonus:50,wager:4,cashback:1,daily:0.8,expires:"2026-03-12"
+},
+{
+platform:"Jackpota",
+url:"https://www.jackpota.com/?r=411608798",
+bonus:35,wager:3,cashback:3,daily:1,expires:"2026-03-22"
+},
+{
+platform:"Sixty6 Casino",
+url:"https://sixty6casino.com",
+bonus:2,wager:6,cashback:0,daily:0.5,expires:"2026-03-10"
+},
+{
+platform:"SweepNext Casino",
+url:"https://sweepnextcasino.com",
+bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-18"
+},
+{
+platform:"Sweet Sweeps Casino",
+url:"https://sweetsweepscasino.com",
+bonus:40,wager:5,cashback:2,daily:0.7,expires:"2026-03-14"
+},
+{
+platform:"Hello Millions",
+url:"https://www.hellomillions.com/lp/raf?r=aaa5691e%2F2187439757",
+bonus:25,wager:4,cashback:1,daily:0.6,expires:"2026-03-15"
+},
+{
+platform:"Rolla Casino",
+url:"https://rollacasino.com",
+bonus:30,wager:4,cashback:2,daily:0.8,expires:"2026-03-15"
+},
+{
+platform:"MyPrize.US",
+url:"https://myprize.us",
+bonus:60,wager:3,cashback:3,daily:1,expires:"2026-03-20"
+},
+{
+platform:"Spree Casino",
+url:"https://spreecasino.com",
+bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-16"
+},
+{
+platform:"Fortune Coins",
+url:"https://fortunecoins.com",
+bonus:20,wager:5,cashback:1,daily:0.4,expires:"2026-03-10"
+},
+{
+platform:"ACE.com Casino",
+url:"https://ace.com",
+bonus:2.5,wager:5,cashback:0,daily:0.5,expires:"2026-03-18"
+}
+];
+function calculateValueScore(p){
+return ((p.bonus+(p.daily*7))/p.wager+(p.cashback/10)).toFixed(2);
+}
+
+function riskLevel(w){
+if(w<=1)return{label:"Low",color:"text-green-400"};
+if(w<=5)return{label:"Medium",color:"text-yellow-400"};
+return{label:"High",color:"text-red-500"};
+}
+
+function renderTable(data){
+const table=document.getElementById("promoTable");
+table.innerHTML="";
+data.forEach(p=>{
+const score=calculateValueScore(p);
+const risk=riskLevel(p.wager);
+table.innerHTML+=`
+<tr class="border-b border-gray-800">
+<td class="p-3 font-semibold">
+<a href="${p.url}" target="_blank" class="text-blue-400 hover:text-blue-300 hover:underline">
+${p.platform}
+</a>
+</td>
+<td class="p-3">$${p.bonus}</td>
+<td class="p-3">${p.wager}x</td>
+<td class="p-3">${p.cashback}%</td>
+<td class="p-3">$${p.daily}</td>
+<td class="p-3">${p.expires}</td>
+<td class="p-3 font-semibold text-green-400">${score}</td>
+<td class="p-3 font-semibold ${risk.color}">${risk.label}</td>
+</tr>`;
+});
+}
+
+document.getElementById("searchInput").addEventListener("input",e=>{
+const value=e.target.value.toLowerCase();
+renderTable(promos.filter(p=>p.platform.toLowerCase().includes(value)));
+});
+
+renderTable(promos);
+
+</script>
+  <section class="max-w-3xl mx-auto mt-16 text-gray-300 text-sm sm:text-base leading-relaxed px-4">
+
+<h2 class="text-xl font-semibold mb-4 text-white">
+What Is Sweeps Snapshot Pro?
+</h2>
+
+<p class="mb-4">
+Sweeps Snapshot Pro is a sweepstakes casino comparison tool that analyzes promotional bonuses, wagering requirements, cashback percentages, and daily reward values to generate an objective value score.
+</p>
+
+<p class="mb-4">
+Instead of manually comparing multiple sweepstakes casino offers, players can use this tool to quickly evaluate potential edge, risk level, and rollover impact.
+</p>
+
+<p>
+This tool is provided by A Townsend Solution and is designed for informational comparison purposes only.
+</p>
+
+</section>
+<footer class="border-t border-gray-800 mt-12 pt-6 pb-8 text-center text-sm text-gray-400">
+
+  <div class="mb-3">
+    <a href="https://www.illbid.com" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="inline-flex items-center gap-2 text-blue-400 hover:text-blue-300 hover:underline">
+       
+      For the Best Prices on the Internet Visit illbid.com
+      
+      <!-- External Link Icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" 
+           width="16" height="16" 
+           fill="currentColor" 
+           viewBox="0 0 16 16">
+        <path d="M6 3a.5.5 0 0 1 .5-.5H13a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-1 0V4.707L4.854 12.354a.5.5 0 1 1-.708-.708L11.793 4H6.5A.5.5 0 0 1 6 3z"/>
+        <path d="M13.5 13a.5.5 0 0 1-.5.5H3A2 2 0 0 1 1 11.5V3a2 2 0 0 1 2-2h6.5a.5.5 0 0 1 0 1H3a1 1 0 0 0-1 1v8.5a1 1 0 0 0 1 1h10a.5.5 0 0 1 .5.5z"/>
+      </svg>
+    </a>
+  </div>
+
+  <div>
+    © <span id="year"></span> A Townsend Solution
+  </div>
+
+</footer>
+
+<script>
+document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
